[package]
name = "cache_feeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
flate2 = { version = "1", features = ["zlib"] }
hyper = { version = "0.14", features = ["full"] }
anyhow = "1.0.79"