[package]
name = "cache_feeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
actix-web = "4.5"
rocksdb = "0.22"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
